fix overlapping text in some cases

--- a/deb/openmediavault/workbench/src/app/core/components/dashboard/dashboard-widget-system-information/dashboard-widget-system-information.component.scss
+++ b/deb/openmediavault/workbench/src/app/core/components/dashboard/dashboard-widget-system-information/dashboard-widget-system-information.component.scss
@@ -5,5 +5,14 @@
 
   .omv-grid-cell {
     break-inside: avoid;
+    overflow: hidden;
+    word-wrap: break-word;
+    word-break: break-word;
+
+    div {
+      overflow-wrap: break-word;
+      word-break: break-word;
+      word-wrap: break-word;
+    }
   }
 }
